apps/base/rancher/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cattle-system
  labels:
    app: traefik
