apps/base/rancher/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
  namespace: cattle-system
spec:
  ingressClassName: traefik
  entryPoints:
    - websecure
  routes:
    - match: Host(`rancher.prod.ftscode.de`)
      kind: Rule
      services:
        - name: rancher
          port: 80
  tls:
    secretName: rancher-tls
